objects/CSS_WS_Statement__c.object
<CustomObject>
    <fields>
        <fullName>CSS_WS_Quantity_Of_Claims__c</fullName>
        <label>Quantity of Claims</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_DR__c</fullName>
        <description>Service Provider DR</description>
        <inlineHelpText>Service Provider DR</inlineHelpText>
        <label>Service Provider DR</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Dealer__c</fullName>
        <description>Service Provider Dealer Code</description>
        <inlineHelpText>Service Provider Dealer</inlineHelpText>
        <label>Service Provider Dealer</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Name_DR__c</fullName>
        <label>Service Provider Name DR</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Service_Provider_Name_Dealer__c</fullName>
        <label>Service Provider Name Dealer</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Statement_Amount__c</fullName>
        <description>Statement Amount</description>
        <label>Total Amount ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Statement_Status__c</fullName>
        <description>Statement Status</description>
        <label>Statement Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>CSS WS Statement</label>
    <nameField>
        <displayFormat>CSM{00000}{YY}</displayFormat>
        <label>Folio</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSS WS Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>